--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "picofp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A tiny library with some tiny types",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "author": "Eric Skoglund",
   "license": "MPL-2.0",
   "private": false,
